--- a/views/show.ejs
+++ b/views/show.ejs
@@ -36,7 +36,7 @@
               </div>
             <a href="/blogs/<%= blog._id %>/edit" class="ui disabled orange basic button">Edit</a>
             <form action="/blogs/<%= blog._id %>?_method=DELETE" method="POST" class="ui form" id="delete">
-                <button class="ui disabled red basic button" type="submit">Delete</button>
+                <button class="ui  red basic button" type="submit">Delete</button>
             </form>
         </div>
     </div>
