--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header")%>
-<!-- <div class="ui message container">
+<div class="ui message container">
     <i class="close icon"></i>
     <div class="header">
         Welcome to wordwrap. 
@@ -18,7 +18,7 @@
     <p> Request you to take a moment, and write a blog, the developer will feel encouraged.<br>
         Use the new tab above to create a blog or click<a href="/blogs/new"><strong> here.</strong></a>
     </p>
-  </div> -->
+  </div>
 <div class="ui main text container">
     <div class="ui huge header">
         wraps
