--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,3 @@
-.wrapper{
-    height:90vh;
-}
 #delete{
     display:inline;
 }
@@ -11,9 +8,9 @@
 #content{
     text-align: right;
 }
-#show_image{
+/* #show_image{
     height: 50vh;
-}
+} */
 .card{
     margin-bottom:20px;
 }
