--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -14,7 +14,7 @@
     </div>
     <div class="row justify-content-center" style="display: flex; flex-wrap: wrap;">
         <% blogs.forEach( (blog) => {%>
-            <div class="col-12 col-md-7">
+            <div class="col-12 col-lg-7">
                 
             <div class="card ">
                 <div class="card-header">
