--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,7 +8,7 @@
             </div>
             <div class="form-group">
                 <!-- <label for="exampleFormControlFile1">Example file input</label> -->
-                <input type="file" class="form-control-file" name="file" id="file" required>
+                <input type="file" class="form-control-file" name="file" id="file" accept="image/*" required>
               </div>
             <!-- <div class="form-group">
                 <input type="file" name="file" id="file" class="form-control-file" required> 
